# tribev2-interpreter

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
src/tribe_pipeline/: __init__.py  __main__.py  cli.py  config.py  pipeline.py  schemas.py
src/tribe_pipeline/baseline/: __init__.py  loader.py
src/tribe_pipeline/baseline/data/: neutral.npy  neutral_meta.json
src/tribe_pipeline/io/: __init__.py  writers.py
src/tribe_pipeline/prompts/: __init__.py  interpret_brain.md
src/tribe_pipeline/reference/: __init__.py  build.py  build_affect.py  loader.py
src/tribe_pipeline/reference/data/: destrieux_labels.npy  destrieux_parcels.json  network_descriptions.json  parcel_annotations.json  parcel_to_network.json  subcortical_proxies.json
src/tribe_pipeline/reference/data/affect_templates/: emotion_amusement.npy  emotion_anger.npy  emotion_contentment.npy  emotion_fear.npy  emotion_sadness.npy  emotion_surprise.npy  manifest.json  negative_affect_pines.npy
src/tribe_pipeline/services/: __init__.py  affect.py  contrast.py  llm.py  parcellation.py  subcortical.py  tribe.py
src/tribe_pipeline/validation/: __init__.py  validate_affect.py
src/tribe_pipeline/validation/stimuli/: fearful.txt  happy.txt  neutral.txt  sad.txt
